# fastapi-shared

./: README.md  pyproject.toml
fastapi_shared/auth/: __init__.py  aws_cognito.py  jwt.py
fastapi_shared/crud/: __init__.py
fastapi_shared/settings/: __init__.py
