[tool.poetry]
name = "fastapi-shared"
version = "0.0.1"
description = "utility code for fastapi based projects"
authors = ["Thomas Kleinöder <dev@time4oss.de>"]
readme = "README.md"
license = "GPLv3"
packages = [{include = "fastapi_shared"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = {extras = ["standard"], version = "^0.23"}
pydantic = "^2"
pydantic-settings = "^2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
