[tool.poetry]
name = "fastapi-shared"
version = "0.1.2"
description = "utility code for fastapi based projects"
authors = ["Thomas Kleinöder <dev@time4oss.de>"]
readme = "README.md"
license = "GPLv3"
packages = [{include = "fastapi_shared"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0"}
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "^2"
pydantic-settings = "^2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
